Fix dom overflow css

--- a/resources/sass/imports/index/_footer.sass
+++ b/resources/sass/imports/index/_footer.sass
@@ -13,10 +13,12 @@
         margin: 0
     i
         font-size: 1rem
-    .owner i.fa-heart
-        color: #FF5050
-        animation: heartBeat .3s linear infinite
-
+    .owner
+        i.fa-heart
+            color: #FF5050
+            animation: heartBeat .3s linear infinite
+        @media (max-width: 575px)
+            margin-top: 1rem
 
 // @media screen and (max-width: 992px)
 //     .page-footer .copyright-txt
